// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MeetingRowContent /> snapshot should match snapshot 1`] = `
<MeetingRowContent>
  <ListItemBaseSection
    className="md-meeting-row-content-start-section md-meeting-row-content-start-section-no-image"
    position="start"
  >
    <div
      className="md-meeting-row-content-start-section md-meeting-row-content-start-section-no-image"
      data-position="start"
    >
      <div
        className="md-meeting-row-content-border"
        data-color="Transparent"
      />
    </div>
  </ListItemBaseSection>
  <ListItemBaseSection
    className="md-meeting-row-content-middle-section md-meeting-row-content-middle-section-Transparent"
    position="middle"
  >
    <div
      className="md-meeting-row-content-middle-section md-meeting-row-content-middle-section-Transparent"
      data-position="middle"
    />
  </ListItemBaseSection>
</MeetingRowContent>
`;

exports[`<MeetingRowContent /> snapshot should match snapshot with buttonGroup 1`] = `
<MeetingRowContent
  buttonGroup={
    <ButtonGroup
      spaced={true}
    >
      <div
        style={
          Object {
            "paddingRight": 0,
          }
        }
      >
        17
      </div>
      <Mrv2Icon
        name="participant-list"
        scale={16}
      />
      <ButtonPill
        color="join"
      >
        Join
      </ButtonPill>
    </ButtonGroup>
  }
>
  <ListItemBaseSection
    className="md-meeting-row-content-start-section md-meeting-row-content-start-section-no-image"
    position="start"
  >
    <div
      className="md-meeting-row-content-start-section md-meeting-row-content-start-section-no-image"
      data-position="start"
    >
      <div
        className="md-meeting-row-content-border"
        data-color="Transparent"
      />
    </div>
  </ListItemBaseSection>
  <ListItemBaseSection
    className="md-meeting-row-content-middle-section md-meeting-row-content-middle-section-Transparent"
    position="middle"
  >
    <div
      className="md-meeting-row-content-middle-section md-meeting-row-content-middle-section-Transparent"
      data-position="middle"
    />
  </ListItemBaseSection>
  <ListItemBaseSection
    className="md-meeting-row-content-end-section"
    position="end"
  >
    <div
      className="md-meeting-row-content-end-section"
      data-position="end"
    >
      <ButtonGroup
        spaced={true}
      >
        <div
          className="md-button-group-wrapper"
          data-compressed={false}
          data-orientation="horizontal"
          data-round={false}
          data-separator={false}
          data-spaced={true}
        >
          <div
            key="participants-list"
            style={
              Object {
                "paddingRight": 0,
              }
            }
          >
            17
          </div>
          <Mrv2Icon
            key="participants-icon"
            name="participant-list"
            scale={16}
          >
            <Icon
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              data-autoscale={false}
              data-scale={16}
              data-test="participant-list"
              name="participant-list-regular"
              style={Object {}}
            >
              <mdc-icon
                class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                data-autoscale={false}
                data-scale={16}
                data-test="participant-list"
                style={Object {}}
                suppressHydrationWarning={true}
              />
            </Icon>
          </Mrv2Icon>
          <ButtonPill
            color="join"
            key="join-button"
            size={28}
          >
            <Button
              className="md-button-pill-wrapper"
              color="positive"
              data-disabled-outline={false}
              data-grown={false}
              onClick={[Function]}
              onPointerDown={[Function]}
              onPointerUp={[Function]}
              size={28}
              softDisabled={false}
              variant="primary"
            >
              <mdc-button
                class="md-button-pill-wrapper"
                data-disabled-outline={false}
                data-grown={false}
                onPointerDown={[Function]}
                onPointerUp={[Function]}
                suppressHydrationWarning={true}
              >
                Join
              </mdc-button>
            </Button>
          </ButtonPill>
        </div>
      </ButtonGroup>
    </div>
  </ListItemBaseSection>
</MeetingRowContent>
`;

exports[`<MeetingRowContent /> snapshot should match snapshot with children 1`] = `
<MeetingRowContent>
  <ListItemBaseSection
    className="md-meeting-row-content-start-section md-meeting-row-content-start-section-no-image"
    position="start"
  >
    <div
      className="md-meeting-row-content-start-section md-meeting-row-content-start-section-no-image"
      data-position="start"
    >
      <div
        className="md-meeting-row-content-border"
        data-color="Transparent"
      />
    </div>
  </ListItemBaseSection>
  <ListItemBaseSection
    className="md-meeting-row-content-middle-section md-meeting-row-content-middle-section-Transparent"
    position="middle"
  >
    <div
      className="md-meeting-row-content-middle-section md-meeting-row-content-middle-section-Transparent"
      data-position="middle"
    >
      <ButtonPill
        size={28}
      >
        <Button
          className="md-button-pill-wrapper"
          color="default"
          data-disabled-outline={false}
          data-grown={false}
          onClick={[Function]}
          onPointerDown={[Function]}
          onPointerUp={[Function]}
          size={28}
          softDisabled={false}
          variant="primary"
        >
          <mdc-button
            class="md-button-pill-wrapper"
            data-disabled-outline={false}
            data-grown={false}
            onPointerDown={[Function]}
            onPointerUp={[Function]}
            suppressHydrationWarning={true}
          >
            Example children
          </mdc-button>
        </Button>
      </ButtonPill>
    </div>
  </ListItemBaseSection>
</MeetingRowContent>
`;

exports[`<MeetingRowContent /> snapshot should match snapshot with color 1`] = `
<MeetingRowContent
  color="TentativeActive"
>
  <ListItemBaseSection
    className="md-meeting-row-content-start-section md-meeting-row-content-start-section-no-image"
    position="start"
  >
    <div
      className="md-meeting-row-content-start-section md-meeting-row-content-start-section-no-image"
      data-position="start"
    >
      <div
        className="md-meeting-row-content-border"
        data-color="TentativeActive"
      />
    </div>
  </ListItemBaseSection>
  <ListItemBaseSection
    className="md-meeting-row-content-middle-section md-meeting-row-content-middle-section-TentativeActive"
    position="middle"
  >
    <div
      className="md-meeting-row-content-middle-section md-meeting-row-content-middle-section-TentativeActive"
      data-position="middle"
    />
  </ListItemBaseSection>
</MeetingRowContent>
`;
